--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -834,6 +834,26 @@ video {
   height: 100vh;
 }
 
+.h-\[190px\] {
+  height: 190px;
+}
+
+.h-\[197px\] {
+  height: 197px;
+}
+
+.h-\[195px\] {
+  height: 195px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -895,6 +915,18 @@ video {
   width: 100vw;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -953,6 +985,53 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
 }
 
 .cursor-pointer {
@@ -1145,6 +1224,36 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-red-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(153 27 27 / var(--tw-border-opacity));
+}
+
+.border-\[\#ff0055\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 0 85 / var(--tw-border-opacity));
+}
+
+.border-green-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+
+.border-green-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(21 128 61 / var(--tw-border-opacity));
+}
+
+.border-\[\#00ff88\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 255 136 / var(--tw-border-opacity));
+}
+
 .bg-\[\#00FFFF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(0 255 255 / var(--tw-bg-opacity));
@@ -1208,6 +1317,57 @@ video {
   background-color: rgb(255 255 255 / 0.05);
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-red-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-red-200\/50 {
+  background-color: rgb(254 202 202 / 0.5);
+}
+
+.bg-red-500\/50 {
+  background-color: rgb(239 68 68 / 0.5);
+}
+
+.bg-red-500\/70 {
+  background-color: rgb(239 68 68 / 0.7);
+}
+
+.bg-red-600\/30 {
+  background-color: rgb(220 38 38 / 0.3);
+}
+
+.bg-red-900\/40 {
+  background-color: rgb(127 29 29 / 0.4);
+}
+
+.bg-\[\#ff0055\]\/40 {
+  background-color: rgb(255 0 85 / 0.4);
+}
+
+.bg-green-400\/30 {
+  background-color: rgb(74 222 128 / 0.3);
+}
+
+.bg-green-800\/40 {
+  background-color: rgb(22 101 52 / 0.4);
+}
+
+.bg-\[\#00ff88\]\/30 {
+  background-color: rgb(0 255 136 / 0.3);
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1255,6 +1415,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-25 {
+  padding: 6.25rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -1269,10 +1433,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-25 {
-  padding: 6.25rem;
 }
 
 .px-10 {
@@ -1346,6 +1506,22 @@ video {
   padding-top: 2rem;
 }
 
+.pl-25 {
+  padding-left: 6.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1387,6 +1563,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1445,6 +1626,30 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[black\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\#\#FF007A\] {
+  color: ##FF007A;
+}
+
+.text-\[\#00ccff\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 204 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#17c7c7\] {
+  --tw-text-opacity: 1;
+  color: rgb(23 199 199 / var(--tw-text-opacity));
+}
+
+.text-\[\#23ecec\] {
+  --tw-text-opacity: 1;
+  color: rgb(35 236 236 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1480,6 +1685,90 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_rgba\(0\2c 0\2c 0\2c 1\)\2c 0_0_40px_rgba\(00\2c 0\2c 0\.9\)\2c 0_0_60px_rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
+  --tw-shadow: 0 0 20px rgba(0,0,0,1),0 0 40px rgba(00,0,0.9),0 0 60px rgba(0,0,0,0.8);
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_15px_\#ff0000\2c 0_0_30px_\#ff0000\2c 0_0_60px_\#ff0000\] {
+  --tw-shadow: 0 0 15px #ff0000,0 0 30px #ff0000,0 0 60px #ff0000;
+  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#8b0000\2c 0_0_25px_\#8b0000\] {
+  --tw-shadow: 0 0 10px #8b0000,0 0 25px #8b0000;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 25px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_\#ff0055\2c 0_0_40px_\#ff0055\2c 0_0_60px_\#ff0055\] {
+  --tw-shadow: 0 0 20px #ff0055,0 0 40px #ff0055,0 0 60px #ff0055;
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_15px_\#00ff88\2c 0_0_30px_\#00ff88\2c 0_0_60px_\#00ff88\] {
+  --tw-shadow: 0 0 15px #00ff88,0 0 30px #00ff88,0 0 60px #00ff88;
+  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#006400\2c 0_0_20px_\#006400\] {
+  --tw-shadow: 0 0 10px #006400,0 0 20px #006400;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\2c 0_0_60px_\#00ff88\] {
+  --tw-shadow: 0 0 20px #00ff88,0 0 40px #00ff88,0 0 60px #00ff88;
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_60px_\#00ff88\] {
+  --tw-shadow: 0 0 20px #00ff88,0 0 20px #00ff88,0 0 60px #00ff88;
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_\#00ff88\2c 0_0_10px_\#00ff88\2c 0_0_60px_\#00ff88\] {
+  --tw-shadow: 0 0 20px #00ff88,0 0 10px #00ff88,0 0 60px #00ff88;
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 10px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_20px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\] {
+  --tw-shadow: 0 0 20px #00ff88,0 0 20px #00ff88,0 0 40px #00ff88;
+  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\] {
+  --tw-shadow: 0 0 10px #00ff88,0 0 20px #00ff88,0 0 40px #00ff88;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#ff0000\2c 0_0_30px_\#ff0000\2c 0_0_60px_\#ff0000\] {
+  --tw-shadow: 0 0 10px #ff0000,0 0 30px #ff0000,0 0 60px #ff0000;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#ff0000\2c 0_0_20px_\#ff0000\2c 0_0_60px_\#ff0000\] {
+  --tw-shadow: 0 0 10px #ff0000,0 0 20px #ff0000,0 0 60px #ff0000;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#ff0000\2c 0_0_20px_\#ff0000\2c 0_0_40px_\#ff0000\] {
+  --tw-shadow: 0 0 10px #ff0000,0 0 20px #ff0000,0 0 40px #ff0000;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1550,6 +1839,12 @@ video {
   transition-duration: 200ms;
 }
 
+.hover\:scale-\[1\.01\]:hover {
+  --tw-scale-x: 1.01;
+  --tw-scale-y: 1.01;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -1568,6 +1863,12 @@ video {
 .hover\:bg-red-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.hover\:shadow-\[0_0_15px_\#ff0000\2c 0_0_30px_\#ff0000\]:hover {
+  --tw-shadow: 0 0 15px #ff0000,0 0 30px #ff0000;
+  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:brightness-125:hover {
